--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "momentjs": "~2.5.0",
     "normalize-css": "~2.1.3",
     "requirejs": "~2.1.10",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "requirejs": "~2.1.10"
   }
 }
