--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "momentjs": "~2.5.0",
     "normalize-css": "~2.1.3",
     "font-awesome": "~4.0.3",
-    "requirejs": "~2.1.10"
+    "requirejs": "~2.1.10",
+    "raphael": "~2.1.2"
   }
 }
