--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,6 @@
     "normalize-css": "~2.1.3",
     "font-awesome": "~4.0.3",
     "requirejs": "~2.1.10",
-    "raphael": "~2.1.2"
+    "nvd3": "~1.1.15"
   }
 }
