--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,10 @@
     "normalize-css": "~2.1.3",
     "font-awesome": "~4.0.3",
     "requirejs": "~2.1.10",
-    "nvd3": "~1.1.15"
+    "nvd3": "~1.1.15",
+    "d3": "~3.4.1"
+  },
+  "resolutions": {
+    "d3": "~3.4.1"
   }
 }
