started work in api refactoring (usage of backbone, userhandling)

--- a/sandglass/public/bower.json
+++ b/sandglass/public/bower.json
@@ -10,9 +10,12 @@
     "font-awesome": "~4.0.3",
     "requirejs": "~2.1.10",
     "nvd3": "~1.1.15",
-    "d3": "~3.4.1"
+    "d3": "~3.4.1",
+    "backbone": "~1.1.10",
+    "jquery.cookie": "~1.4.0"
   },
   "resolutions": {
-    "d3": "~3.4.1"
+    "d3": "~3.4.1",
+    "jquery": "~2.1.0"
   }
 }
