--- a/sandglass/public/bower.json
+++ b/sandglass/public/bower.json
@@ -3,15 +3,13 @@
   "version": "0.0.1",
   "dependencies": {
     "jquery": "2.1.0",
-    "jquery-ui": "~1.10.3",
+    "jquery-ui": "~1.10.4",
     "lodash": "~2.4.1",
     "momentjs": "~2.5.1",
     "normalize-css": "~2.1.3",
     "font-awesome": "~4.0.3",
-    "requirejs": "~2.1.10",
-    "nvd3": "~1.1.15",
-    "d3": "git@github.com:mbostock/d3.git",
-    "backbone": "git@github.com:jashkenas/backbone.git",
+    "requirejs": "~2.1.11",
+    "backbone": "~1.1.2",
     "jquery-cookie": "~1.4.0",
     "async": "0.2.5"
   }
