--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "gulp": "^3.5.5",
-    "gulp-less": "^1.2.2"
+    "gulp-less": "^1.2.2",
+    "gulp-jshint": "^1.5.0"
   }
 }
