--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "gulp": "^3.5.5",
     "gulp-less": "^1.2.2",
-    "gulp-jshint": "^1.5.0"
+    "gulp-jshint": "^1.5.0",
+    "gulp-bower": "0.0.3"
   }
 }
